--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     <nav>
         <h2><img id="hi" src="https://art.ngfiles.com/images/781000/781757_sketching1star_pac-man-looped.gif?f1547186404" alt=""></h2>
         <ul>
-            <li><a href="file:///Users/nivu/Desktop/Coding%20class/Codeyoung/Compitition/PACMANREAL.html">HomePage</a></li>
-            <li><a href="file:///Users/nivu/Desktop/Coding%20class/Codeyoung/Compitition/PACMANREAL2.html">AboutPage</a></li>
-            <li><a href="file:///Users/nivu/Desktop/Coding%20class/Codeyoung/Compitition/PACMANREAL3.html">Videos and GIF'S</a></li>
-            <li><a href="file:///Users/nivu/Desktop/Coding%20class/Codeyoung/Compitition/PACMANREAL4.html">Games</a></li>
-            <li><a href="file:///Users/nivu/Desktop/Coding%20class/Codeyoung/Compitition/PACMANREAL5.html">Survey</a></li>
+            <li><a href="PACMANREAL.html">HomePage</a></li>
+            <li><a href="PACMANREAL2.html">AboutPage</a></li>
+            <li><a href="PACMANREAL3.html">Videos and GIF'S</a></li>
+            <li><a href="PACMANREAL4.html">Games</a></li>
+            <li><a href="PACMANREAL5.html">Survey</a></li>
         </ul>
     </nav><br>
     <img class="pacy" src="https://static.wikia.nocookie.net/pacman/images/2/28/Pac-Man_character_art_-_The_Adventure_Begins.png/revision/latest?cb=20190923020924" alt="">
